/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CFE_ES_AppInfo_t_pb
{
	required uint32 Type = 1;
	required uint32 ExecutionCounter = 2;
	required string Name = 3;
	required string MainTaskName = 4;
	required uint32 CodeAddress = 5;
	required uint32 CodeSize = 6;
	required string FileName = 7;
	required uint32 Priority = 8;
	required uint32 BSSSize = 9;
	required uint32 DataAddress = 10;
	required uint32 MainTaskId = 11;
	required uint32 BSSAddress = 12;
	required uint32 AppId = 13;
	required uint32 StartAddress = 14;
	required uint32 AddressesAreValid = 15;
	required uint32 StackSize = 16;
	required uint32 DataSize = 17;
	required uint32 NumOfChildTasks = 18;
	required string EntryPoint = 19;
	required uint32 ExceptionAction = 20;
	required uint32 ModuleId = 21;
}

message CFE_ES_OneAppTlm_Payload_t_pb
{

	required CFE_ES_AppInfo_t_pb AppInfo = 1;
}