/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CFE_EVS_Log_t_pb
{
	repeated CFE_EVS_Packet_t_pb LogEntry = 1;
	required uint32 Next = 2;
	required uint32 LogMode = 3;
	required uint32 LogOverflowCounter = 4;
	required uint32 LogCount = 5;
	required uint32 LogFullFlag = 6;
}


message CFE_EVS_Packet_t_pb
{
	repeated uint32 TlmHeader = 1;
	required CFE_EVS_Packet_Payload_t_pb Payload = 2;
}


message CFE_EVS_Packet_Payload_t_pb
{
	required string Message = 1;
	required CFE_EVS_PacketID_t_pb PacketID = 2;
	required uint32 Spare1 = 3;
	required uint32 Spare2 = 4;
}


message CFE_EVS_PacketID_t_pb
{
	required uint32 EventID = 1;
	required uint32 ProcessorID = 2;
	required uint32 SpacecraftID = 3;
	required uint32 EventType = 4;
	required string AppName = 5;
}


message CFE_TIME_ResetVars_t_pb
{
	required uint32 ClockSignal = 1;
	required CFE_TIME_SysTime_t_pb CurrentDelay = 2;
	required CFE_TIME_SysTime_t_pb CurrentMET = 3;
	required CFE_TIME_SysTime_t_pb CurrentSTCF = 4;
	required int32 LeapSeconds = 5;
	required uint32 Signature = 6;
}


message CFE_TIME_SysTime_t_pb
{
	required uint32 Seconds = 1;
	required uint32 Subseconds = 2;
}


message CFE_ES_ERLog_t_pb
{
	required uint32 ResetSubtype = 1;
	required CFE_ES_DebugVariables_t_pb DebugVars = 2;
	required uint32 ProcessorResetCount = 3;
	required uint32 ContextSize = 4;
	required uint32 LogEntryType = 5;
	required uint32 ResetType = 6;
	repeated uint32 Context = 7;
	required uint32 AppID = 8;
	required CFE_TIME_SysTime_t_pb TimeCode = 9;
	required string Description = 10;
	required uint32 MaxProcessorResetCount = 11;
	required uint32 BootSource = 12;
}


message CFE_ES_DebugVariables_t_pb
{
	required uint32 WatchdogWriteFlag = 1;
	required uint32 DebugFlag = 2;
	required uint32 LastAppId = 3;
	required uint32 PrintfEnabledFlag = 4;
}


message CFE_ES_ResetVariables_t_pb
{
	required uint32 BootSource = 1;
	required uint32 ProcessorResetCount = 2;
	required uint32 ResetType = 3;
	required uint32 MaxProcessorResetCount = 4;
	required uint32 ES_CausedReset = 5;
	required uint32 ResetSubtype = 6;
}


message CFE_ES_PerfData_t_pb
{
	repeated CFE_ES_PerfDataEntry_t_pb DataBuffer = 1;
	required CFE_ES_PerfMetaData_t_pb MetaData = 2;
}


message CFE_ES_PerfDataEntry_t_pb
{
	required uint32 TimerLower32 = 1;
	required uint32 Data = 2;
	required uint32 TimerUpper32 = 3;
}


message CFE_ES_PerfMetaData_t_pb
{
	repeated uint32 FilterMask = 1;
	required uint32 InvalidMarkerReported = 2;
	required uint32 TimerLow32Rollover = 3;
	required uint32 Endian = 4;
	required uint32 TriggerCount = 5;
	repeated uint32 TriggerMask = 6;
	required uint32 State = 7;
	required uint32 Version = 8;
	repeated uint32 Spare = 9;
	required uint32 DataStart = 10;
	required uint32 DataCount = 11;
	required uint32 TimerTicksPerSecond = 12;
	required uint32 DataEnd = 13;
	required uint32 FilterTriggerMaskSize = 14;
	required uint32 Mode = 15;
}

message CFE_ES_ResetData_t_pb
{

	required uint32 SystemLogMode = 1;
	required CFE_ES_PerfData_t_pb Perf = 2;
	required CFE_TIME_ResetVars_t_pb TimeResetVars = 3;
	required uint32 SystemLogIndex = 4;
	required uint32 SystemLogEntryNum = 5;
	required uint32 ERLogEntries = 6;
	required uint32 ERLogIndex = 7;
	required string SystemLog = 8;
	repeated CFE_ES_ERLog_t_pb ERLog = 9;
	required uint32 LastAppId = 10;
	required CFE_EVS_Log_t_pb EVS_Log = 11;
	required CFE_ES_ResetVariables_t_pb ResetVars = 12;
}