/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CCSDS_PriHdr_t_pb
{
	repeated uint32 Length = 1;
	repeated uint32 Sequence = 2;
	repeated uint32 StreamId = 3;
}

message CFE_SB_Msg_t_pb
{

	required uint32 Dword = 1;
	repeated uint32 Byte = 2;
	required CCSDS_PriHdr_t_pb Hdr = 3;
}